# AltcoinPatternAnalyzer

./: .env  .replit  3.4.3  Pasted--Strategy-Backtesting-Choose-Your-Trading-Approach-1-Custom-Strategy-Builder-Design-your--1731392194356.txt  Pasted--use-client-import-useState-useEffect-from-react-import-Line-LineChart-XAxis-YAxis--1731820001714.txt  Pasted-Bitcoin-Waterfall-Chart-Altcoin-Market-Cap-Sequencing-Function-Overview-The-Bitcoin-Waterfall-Char-1731804261618.txt  Pasted-CCXT-error-binance-GET-https-api-binance-com-api-v3-exchangeInfo-451-code-0-msg-Service-1731367053725.txt  Pasted-Comprehensive-Prompt-with-Improvements-Help-analyze-historical-altcoin-patterns-during-Bitcoin-ral-1731355961266.txt  Pasted-Cryptocurrency-Analysis-Platform-Current-Price-87-111-85-28-43-24h-Volume-71-615-663-554-1731366799740.txt  Pasted-Cryptocurrency-Analysis-Platform-Current-Price-88-868-06-40-72-24h-Volume-48-220-052-336-1731447992375.txt  Pasted-Cryptocurrency-Analysis-Platform-Exchange-kraken-error-kraken-does-not-have-market-symbol-BITCOIN--1731367386462.txt  Pasted-Help-analyze-historical-alt-coin-patterns-during-Bitcoin-rallies-and-create-a-stair-stepping-strateg-1731394061565.txt  Pasted-Looking-at-the-provided-code-I-ll-analyze-the-real-time-analysis-functionality-and-suggest-improvem-1731639088989.txt  Pasted-Rob-s-15-Minute-Reversal-Trade-1-Entry-Conditions-Primary-Signal-Buy-when-a-bullish-reversal-can-1731446636992.txt  Pasted-Strategy-Builder-Strategy-Input-Method-Natural-Language-Template-Manual-Builder-S-1731446997621.txt  Pasted-The-Bitcoin-Waterfall-Chart-Altcoin-Sequencing-function-is-a-powerful-analytical-tool-designed-to--1731618902486.txt  Pasted-ValueError-numpy-dtype-size-changed-may-indicate-binary-incompatibility-Expected-96-from-C-header-1731390477937.txt  Pasted-X-API-V2-Products-If-you-need-higher-levels-of-access-sign-up-for-the-Enterprise-API-today-Start--1731382540133.txt  README.md  app.py  check_dependencies.py  data_fetcher.py  index.html  main.py  package.json  pyproject.toml  replit_zip_error_log.txt  requirements.txt  start_app.py  streamlit_config.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
.streamlit/: config.toml
.upm/: store.json
components/: altcoin_analysis.py  backtesting.py  charts.py  metrics.py  portfolio_tracker.py  predictions.py  sentiment.py  sidebar.py  strategy_builder.py
src/: App.tsx  env.d.ts  environment.d.ts  index.css  vite-env.d.ts  vite.d.ts
styles/: theme.py
utils/: altcoin_analyzer.py  backtesting.py  data_fetcher.py  phase_analyzer.py  price_predictor.py  sentiment_analyzer.py  social_sentiment.py  symbol_converter.py  technical_analysis.py  (+3 more)
(+12 files in other folders)
