[project]
name = "repl-nix-altcoinpatternanalyzer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ccxt==4.1.13",
    "cryptocompare>=0.7.6",
    "dataclasses>=0.8",
    "feedparser>=6.0.10",
    "nltk>=3.8.1",
    "numpy==1.24.3",
    "openai>=1.54.3",
    "pandas==2.0.3",
    "plotly==5.18.0",
    "pycoingecko==3.1.0",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.6",
    "pytz==2023.3",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "scipy",
    "seaborn==0.13.0",
    "spacy>=1.14.1",
    "streamlit==1.28.1",
    "ta",
    "textblob>=0.18.0.post0",
    "tweepy>=4.14.0",
    "vadersentiment>=3.3.2",
    "yfinance==0.2.31",
]
